--- a/ZotPad/MainStoryboard_iPhone.storyboard
+++ b/ZotPad/MainStoryboard_iPhone.storyboard
@@ -425,8 +425,17 @@
                             <outlet property="delegate" destination="QRL-oX-VsM" id="99Q-uR-vBh"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Item details" id="Mnj-Iv-g4b"/>
+                    <navigationItem key="navigationItem" title="Item details" id="Mnj-Iv-g4b">
+                        <barButtonItem key="rightBarButtonItem" enabled="NO" systemItem="action" id="GEV-p0-7JW">
+                            <connections>
+                                <action selector="actionButtonPressed:" destination="QRL-oX-VsM" id="1aZ-27-bFo"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
+                    <connections>
+                        <outlet property="actionButton" destination="GEV-p0-7JW" id="wXf-y2-BM5"/>
+                    </connections>
                 </viewController>
             </objects>
             <point key="canvasLocation" x="1344" y="64"/>
@@ -520,6 +529,11 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" id="Zlp-7s-Br1" customClass="iCarousel">
+                                <rect key="frame" x="0.0" y="127" width="320" height="268"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                            </view>
                             <navigationBar contentMode="scaleToFill" id="kRr-D1-EGD">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
@@ -528,7 +542,7 @@
                                 </items>
                             </navigationBar>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="p32-jv-k7P">
-                                <rect key="frame" x="20" y="403" width="131" height="37"/>
+                                <rect key="frame" x="20" y="403" width="135" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                 <state key="normal" title="Use my version">
@@ -543,10 +557,10 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="hTu-Qz-aUO">
-                                <rect key="frame" x="169" y="403" width="131" height="37"/>
+                                <rect key="frame" x="165" y="403" width="135" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
-                                <state key="normal" title="Use remote version">
+                                <state key="normal" title="Use server version">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -557,18 +571,13 @@
                                     <action selector="useRemoteVersion:" destination="RIY-yW-qZT" eventType="touchUpInside" id="BZf-d6-EUf"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="The following item has changed on the server" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="10" id="lnP-1n-Zbj">
-                                <rect key="frame" x="20" y="44" width="280" height="50"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="The following item has changed on the server" lineBreakMode="characterWrap" numberOfLines="3" baselineAdjustment="alignBaselines" minimumFontSize="10" id="lnP-1n-Zbj">
+                                <rect key="frame" x="20" y="44" width="280" height="75"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" id="Zlp-7s-Br1" customClass="iCarousel">
-                                <rect key="frame" x="0.0" y="102" width="320" height="281"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
