--- a/ZotPad/MainStoryboard_iPad.storyboard
+++ b/ZotPad/MainStoryboard_iPad.storyboard
@@ -288,6 +288,7 @@
                         <segue destination="bpw-6z-DmG" kind="modal" identifier="Authentication" modalPresentationStyle="pageSheet" id="jVu-Eo-vW4"/>
                         <segue destination="3ej-hc-vCg" kind="modal" identifier="Import" modalPresentationStyle="formSheet" id="5eY-X6-fSZ"/>
                         <segue destination="htM-EZ-pFH" kind="modal" identifier="FileUploadConflict" id="bAm-Ev-B5H"/>
+                        <segue destination="krk-Vp-4gf" kind="modal" identifier="ShowLogView" modalPresentationStyle="fullScreen" modalTransitionStyle="flipHorizontal" id="ODr-oO-YQ7"/>
                     </connections>
                 </splitViewController>
             </objects>
@@ -323,15 +324,12 @@
                     </tableView>
                     <toolbarItems>
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="uum-Bh-nv7"/>
-                        <barButtonItem image="gear.png" id="1wH-FN-IJx">
-                            <connections>
-                                <segue destination="krk-Vp-4gf" kind="modal" modalPresentationStyle="fullScreen" modalTransitionStyle="flipHorizontal" id="ENZ-SZ-DmI"/>
-                            </connections>
-                        </barButtonItem>
+                        <barButtonItem image="gear.png" id="1wH-FN-IJx"/>
                     </toolbarItems>
                     <navigationItem key="navigationItem" title="Libraries" id="39"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="gearButton" destination="1wH-FN-IJx" id="9Sk-W0-UJE"/>
                         <segue destination="WCH-zk-FP7" kind="push" identifier="PushItemsToNavigator" id="bc4-Il-rI2"/>
                     </connections>
                 </tableViewController>
@@ -590,7 +588,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="NMI-xk-7BP" kind="relationship" relationship="rootViewController" id="jYj-O4-X07"/>
+                        <segue destination="NMI-xk-7BP" kind="relationship" relationship="rootViewController" id="OeO-Y5-zq3"/>
                     </connections>
                 </navigationController>
             </objects>
@@ -661,73 +659,7 @@
                     </connections>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="3269" y="-1346"/>
-        </scene>
-        <!--Log View Controller - ZotPad log-->
-        <scene sceneID="P15-U1-ZQo">
-            <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="mlk-YR-ngw" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController id="Lvo-tO-czX" customClass="ZPLogViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="W5S-qA-6Jf">
-                        <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" editable="NO" id="RhM-vN-EhZ">
-                                <rect key="frame" x="0.0" y="-5" width="768" height="965"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="tHS-mm-kO8">
-                                <rect key="frame" x="0.0" y="960" width="768" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                <items>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="REO-bK-KAe"/>
-                                    <barButtonItem title="View manual" id="lto-Dv-Eky">
-                                        <connections>
-                                            <action selector="showManual:" destination="Lvo-tO-czX" id="RvB-27-7GN"/>
-                                        </connections>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="1TM-9F-Ggq"/>
-                                    <barButtonItem title="Online support" id="wdN-yh-YAW">
-                                        <connections>
-                                            <action selector="onlineSupport:" destination="Lvo-tO-czX" id="HJ5-Yh-ji1"/>
-                                        </connections>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="ZVe-A5-Rmk"/>
-                                    <barButtonItem title="Email support" id="0ef-sZ-oIn">
-                                        <connections>
-                                            <action selector="emailSupport:" destination="Lvo-tO-czX" id="dW8-Rq-UqI"/>
-                                        </connections>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="EAd-A6-XFd"/>
-                                    <barButtonItem title="Manage API key" id="mJx-IG-t2P">
-                                        <connections>
-                                            <action selector="manageKey:" destination="Lvo-tO-czX" id="JRP-6s-m98"/>
-                                        </connections>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="JvU-6a-Wbs"/>
-                                </items>
-                                <color key="tintColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
-                            </toolbar>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="ZotPad log" id="hBd-TN-hTK">
-                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="Wlg-2u-l5E">
-                            <connections>
-                                <action selector="dismiss:" destination="Lvo-tO-czX" id="DTp-Bg-H4X"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
-                    <connections>
-                        <outlet property="logView" destination="RhM-vN-EhZ" id="HpX-f2-fST"/>
-                    </connections>
-                </viewController>
-            </objects>
-            <point key="canvasLocation" x="3269" y="-1346"/>
+            <point key="canvasLocation" x="3161" y="-1346"/>
         </scene>
     </scenes>
     <resources>
@@ -772,6 +704,9 @@
         </class>
         <class className="ZPLibraryAndCollectionListViewController" superclassName="UITableViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPLibraryAndCollectionListViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="gearButton" candidateClass="UIBarButtonItem"/>
+            </relationships>
         </class>
         <class className="ZPLogViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPLogViewController.h"/>
@@ -786,6 +721,9 @@
         </class>
         <class className="ZPSplitViewController" superclassName="UISplitViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPSplitViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="showLogView:"/>
+            </relationships>
         </class>
         <class className="ZPUploadVersionConflictViewControllerViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPUploadVersionConflictViewControllerViewController.h"/>
