--- a/ZotPad/MainStoryboard_iPhone.storyboard
+++ b/ZotPad/MainStoryboard_iPhone.storyboard
@@ -10,7 +10,7 @@
         <scene sceneID="11">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="10" sceneMemberID="firstResponder"/>
-                <navigationController id="3" sceneMemberID="viewController">
+                <navigationController id="3" customClass="ZPNavigationController" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="4">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -570,6 +570,9 @@
         </class>
         <class className="ZPLibraryAndCollectionListViewController" superclassName="UITableViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPLibraryAndCollectionListViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="gearButton" candidateClass="UIBarButtonItem"/>
+            </relationships>
         </class>
         <class className="ZPLogViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPLogViewController.h"/>
@@ -606,6 +609,6 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="Dn4-w4-r0y"/>
+        <segue reference="8vN-1U-A0T"/>
     </inferredMetricsTieBreakers>
 </document>
